[gd_scene load_steps=2 format=3 uid="uid://m7xyfdg1014n"]

[ext_resource type="Script" path="res://Weapons/weapon.gd" id="1_yn22k"]

[node name="Weapon" type="Node3D"]
script = ExtResource("1_yn22k")

[node name="FireSound" type="AudioStreamPlayer3D" parent="."]
panning_strength = 0.3

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.808
one_shot = true

[node name="FireRate" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GunModel" type="MeshInstance3D" parent="."]

[connection signal="outta_rounds" from="." to="." method="_on_outta_rounds"]
